--- a/package.json
+++ b/package.json
@@ -2,17 +2,6 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "lodash": "^4.17.21",
-    "nodemon": "^3.1.7"
-  },
-  "name": "projeto_integrador_leila_bolos",
-  "version": "1.0.0",
-  "description": "<H1>SITE: BOLOS DA LEILA</H1>",
-  "main": "script.js",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "lodash": "^4.17.21"
+  }
 }
